GiRaFFE_NRPy/Stilde_flux: Change computation of g4DD_dD to match old GiRaFFE.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "thismodule = \"GiRaFFE_NRPy_Source_Terms\"\n",
     "\n",
-    "def generate_memory_access_code():\n",
+    "def generate_memory_access_code(gammaDD,betaU,alpha):\n",
     "    # There are several pieces of C code that we will write ourselves because we need to do things\n",
     "    # a little bit outside of what NRPy+ is built for.\n",
     "    # First, we will write general memory access. We will read in values from memory at a given point\n",
@@ -120,17 +120,85 @@
     "    # Next we evaluate needed derivatives of the metric, based on their values at cell faces\n",
     "    global metric_deriv_access\n",
     "    metric_deriv_access = []\n",
+    "#     for dirn in range(3):\n",
+    "#         metric_deriv_access.append(\"\")\n",
+    "#         for var in [\"GAMMA_FACEDDdD00\", \"GAMMA_FACEDDdD01\", \"GAMMA_FACEDDdD02\",\n",
+    "#                     \"GAMMA_FACEDDdD11\", \"GAMMA_FACEDDdD12\", \"GAMMA_FACEDDdD22\",\n",
+    "#                     \"BETA_FACEUdD0\", \"BETA_FACEUdD1\", \"BETA_FACEUdD2\",\"ALPHA_FACEdD\"]:\n",
+    "#             lhsvar = var.lower().replace(\"dddd\",\"DDdD\").replace(\"udd\",\"UdD\").replace(\"dd\",\"dD\").replace(\"u\",\"U\").replace(\"_face\",\"\")\n",
+    "#             rhsvar = var.replace(\"dD\",\"\")\n",
+    "#             # e.g.,\n",
+    "#             # const REAL gammaDDdD000 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx0;\n",
+    "#             metric_deriv_access[dirn] += \"const REAL \"+lhsvar+str(dirn)+\" = (auxevol_gfs[IDX4S(\"+rhsvar+\"GF,\"+idxp1(dirn)+\")]-auxevol_gfs[IDX4S(\"+rhsvar+\"GF,i0,i1,i2)])/dxx\"+str(dirn)+\";\\n\"\n",
+    "#         metric_deriv_access[dirn] += \"REAL Stilde_rhsD\"+str(dirn)+\";\\n\"\n",
+    "    # For this workaround, instead of taking the derivative of the metric components and then building the\n",
+    "    # four-metric, we build the four-metric and then take derivatives. Do this at i and i+1\n",
     "    for dirn in range(3):\n",
     "        metric_deriv_access.append(\"\")\n",
-    "        for var in [\"GAMMA_FACEDDdD00\", \"GAMMA_FACEDDdD01\", \"GAMMA_FACEDDdD02\",\n",
-    "                    \"GAMMA_FACEDDdD11\", \"GAMMA_FACEDDdD12\", \"GAMMA_FACEDDdD22\",\n",
-    "                    \"BETA_FACEUdD0\", \"BETA_FACEUdD1\", \"BETA_FACEUdD2\",\"ALPHA_FACEdD\"]:\n",
-    "            lhsvar = var.lower().replace(\"dddd\",\"DDdD\").replace(\"udd\",\"UdD\").replace(\"dd\",\"dD\").replace(\"u\",\"U\").replace(\"_face\",\"\")\n",
-    "            rhsvar = var.replace(\"dD\",\"\")\n",
+    "        for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
+    "                    \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
+    "                    \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\"]:\n",
+    "            lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\")\n",
+    "            rhsvar = var\n",
     "            # e.g.,\n",
-    "            # const REAL gammaDDdD000 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx0;\n",
-    "            metric_deriv_access[dirn] += \"const REAL \"+lhsvar+str(dirn)+\" = (auxevol_gfs[IDX4S(\"+rhsvar+\"GF,\"+idxp1(dirn)+\")]-auxevol_gfs[IDX4S(\"+rhsvar+\"GF,i0,i1,i2)])/dxx\"+str(dirn)+\";\\n\"\n",
+    "            # const REAL gammaDD00 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
+    "            metric_deriv_access[dirn] += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+rhsvar+\"GF,i0,i1,i2)];\\n\"\n",
+    "        # Read in at the next grid point\n",
+    "        for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
+    "                    \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
+    "                    \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\"]:\n",
+    "            lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"_face\",\"_facep1\")\n",
+    "            rhsvar = var\n",
+    "            # e.g.,\n",
+    "            # const REAL gammaDD00 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)];\n",
+    "            metric_deriv_access[dirn] += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+rhsvar+\"GF,\"+idxp1(dirn)+\")];\\n\"\n",
     "        metric_deriv_access[dirn] += \"REAL Stilde_rhsD\"+str(dirn)+\";\\n\"\n",
+    "    import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
+    "    AB4m.g4DD_ito_BSSN_or_ADM(\"ADM\",gammaDD,betaU,alpha)\n",
+    "    four_metric_vars = [\n",
+    "                        AB4m.g4DD[0][0],\n",
+    "                        AB4m.g4DD[0][1],\n",
+    "                        AB4m.g4DD[0][2],\n",
+    "                        AB4m.g4DD[0][3],\n",
+    "                        AB4m.g4DD[1][1],\n",
+    "                        AB4m.g4DD[1][2],\n",
+    "                        AB4m.g4DD[1][3],\n",
+    "                        AB4m.g4DD[2][2],\n",
+    "                        AB4m.g4DD[2][3],\n",
+    "                        AB4m.g4DD[3][3]\n",
+    "                       ]\n",
+    "    four_metric_names = [\n",
+    "                         \"g4DD00\",\n",
+    "                         \"g4DD01\",\n",
+    "                         \"g4DD02\",\n",
+    "                         \"g4DD03\",\n",
+    "                         \"g4DD11\",\n",
+    "                         \"g4DD12\",\n",
+    "                         \"g4DD13\",\n",
+    "                         \"g4DD22\",\n",
+    "                         \"g4DD23\",\n",
+    "                         \"g4DD33\"\n",
+    "                        ]\n",
+    "    global four_metric_C, four_metric_Cp1\n",
+    "    four_metric_C = outputC(four_metric_vars,four_metric_names,\"returnstring\",params=\"outCverbose=False,CSE_sorting=none\")\n",
+    "    for ii in range(len(four_metric_names)):\n",
+    "        four_metric_names[ii] += \"p1\"\n",
+    "    four_metric_Cp1 = outputC(four_metric_vars,four_metric_names,\"returnstring\",params=\"outCverbose=False,CSE_sorting=none\")\n",
+    "    four_metric_C = four_metric_C.replace(\"gamma\",\"gamma_face\").replace(\"beta\",\"beta_face\").replace(\"alpha\",\"alpha_face\").replace(\"{\",\"\").replace(\"}\",\"\").replace(\"g4\",\"const REAL g4\").replace(\"tmp_\",\"tmp_deriv\")\n",
+    "    four_metric_Cp1 = four_metric_Cp1.replace(\"gamma\",\"gamma_facep1\").replace(\"beta\",\"beta_facep1\").replace(\"alpha\",\"alpha_facep1\").replace(\"{\",\"\").replace(\"}\",\"\").replace(\"g4\",\"const REAL g4\").replace(\"tmp_\",\"tmp_derivp\")\n",
+    "\n",
+    "    global four_metric_deriv\n",
+    "    four_metric_deriv = []\n",
+    "    for dirn in range(3):\n",
+    "        four_metric_deriv.append(\"\")\n",
+    "        for var in [\"g4DDdD00\", \"g4DDdD01\", \"g4DDdD02\", \"g4DDdD03\", \"g4DDdD11\",\n",
+    "                    \"g4DDdD12\", \"g4DDdD13\", \"g4DDdD22\", \"g4DDdD23\", \"g4DDdD33\"]:\n",
+    "            lhsvar   = var + str(dirn+1)\n",
+    "            rhsvar   = var.replace(\"dD\",\"\")\n",
+    "            rhsvarp1 = rhsvar + \"p1\"\n",
+    "            # e.g.,\n",
+    "            # const REAL g44DDdD000 = (g4DD00p1 - g4DD00)/dxx0;\n",
+    "            four_metric_deriv[dirn] += \"const REAL \"+lhsvar+\" = (\"+rhsvarp1+\" - \"+rhsvar+\")/dxx\"+str(dirn)+\";\\n\"\n",
     "\n",
     "    # This creates the C code that writes to the Stilde_rhs direction specified.\n",
     "    global write_final_quantity\n",
@@ -140,11 +208,12 @@
     "        write_final_quantity[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(dirn)+\"GF,i0,i1,i2)] += Stilde_rhsD\"+str(dirn)+\";\"\n",
     "\n",
     "def write_out_functions_for_StildeD_source_term(outdir,outCparams,gammaDD,betaU,alpha,ValenciavU,BU,sqrt4pi):\n",
-    "    generate_memory_access_code()\n",
+    "    generate_memory_access_code(gammaDD,betaU,alpha)\n",
     "    # First, we declare some dummy tensors that we will use for the codegen.\n",
     "    gammaDDdD  = ixp.declarerank3(\"gammaDDdD\",\"sym01\",DIM=3)\n",
     "    betaUdD = ixp.declarerank2(\"betaUdD\",\"nosym\",DIM=3)\n",
     "    alphadD = ixp.declarerank1(\"alphadD\",DIM=3)\n",
+    "    g4DDdD = ixp.declarerank3(\"g4DDdD\",\"sym01\",DIM=4)\n",
     "\n",
     "    # We need to rerun a few of these functions with the reset lists to make sure these functions\n",
     "    # don't cheat by using analytic expressions\n",
@@ -153,8 +222,8 @@
     "    GRFFE.compute_smallb4U(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
     "    GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
     "    GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
-    "    GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDDdD,betaUdD,alphadD)\n",
-    "    GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD, GRFFE.TEM4UU)\n",
+    "#     GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDDdD,betaUdD,alphadD)\n",
+    "    GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,g4DDdD, GRFFE.TEM4UU)\n",
     "    for i in range(3):\n",
     "        desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
     "        name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
@@ -163,6 +232,9 @@
     "            params   =\"const paramstruct *params,const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
     "            body     = general_access \\\n",
     "                      +metric_deriv_access[i]\\\n",
+    "                      +four_metric_C\\\n",
+    "                      +four_metric_Cp1\\\n",
+    "                      +four_metric_deriv[i]\\\n",
     "                      +outputC(GRHD.S_tilde_source_termD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=outCparams).replace(\"IDX4\",\"IDX4S\")\\\n",
     "                      +write_final_quantity[i],\n",
     "            loopopts =\"InteriorPoints\",\n",
