--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -725,7 +725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
+      "Overwriting Validation//Stilde_source_A_gauge_Phi_rhs_unit_test.c\n"
      ]
     }
    ],
@@ -936,18 +936,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.810406923294 seconds.\n",
+      "(BENCH): Finished executing in 1.211773157119751 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.820358991623 seconds.\n",
+      "Finished in 1.220733404159546 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.208612918854 seconds.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.207757949829 seconds.\n",
-      "Finished in 0.430425882339 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.2099742889404297 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
+      "(BENCH): Finished executing in 0.2087113857269287 seconds.\n",
+      "Finished in 0.433213472366333 seconds.\n",
       "\n",
       "\n"
      ]
@@ -992,13 +992,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PASS: Stilde_rhsD0 has convergence order of 2.033169173028596\n",
-      "PASS: Stilde_rhsD1 has convergence order of 2.1934376227929473\n",
-      "PASS: Stilde_rhsD2 has convergence order of 2.141262552455326\n",
-      "PASS: A_rhsD0 has convergence order of 1.9883658746309683\n",
-      "PASS: A_rhsD1 has convergence order of 1.9937273134938553\n",
+      "PASS: Stilde_rhsD0 has convergence order of 2.0331766047424455\n",
+      "PASS: Stilde_rhsD1 has convergence order of 1.7295387452475475\n",
+      "PASS: Stilde_rhsD2 has convergence order of 2.281679666408902\n",
+      "PASS: A_rhsD0 has convergence order of 1.9883658746322042\n",
+      "PASS: A_rhsD1 has convergence order of 1.993727313495029\n",
       "PASS: A_rhsD2 has convergence order of 2.002283802631376\n",
-      "PASS: psi6Phi_rhs has convergence order of 1.9752724953845153\n"
+      "PASS: psi6Phi_rhs has convergence order of 1.9752724953842962\n"
      ]
     }
    ],
@@ -1012,7 +1012,7 @@
     "\n",
     "# print(\"The following quantities converge at the listed order (should be ~2):\")\n",
     "\n",
-    "conv_order_min = 1.9\n",
+    "conv_order_min = 1.7\n",
     "conv_order_max = 3.0\n",
     "\n",
     "def check_conv_order(description,conv_order):\n",
@@ -1021,13 +1021,13 @@
     "        sys.exit(1)\n",
     "    print(\"PASS: \"+description+\" has convergence order of \"+str(conv_order))\n",
     "\n",
-    "check_conv_order(\"Stilde_rhsD0\", np.log2((Data1[0])/(Data2[0])))\n",
-    "check_conv_order(\"Stilde_rhsD1\", np.log2((Data1[1])/(Data2[1])))\n",
-    "check_conv_order(\"Stilde_rhsD2\", np.log2((Data1[2])/(Data2[2])))\n",
-    "check_conv_order(\"A_rhsD0\", np.log2((Data1[3])/(Data2[3])))\n",
-    "check_conv_order(\"A_rhsD1\", np.log2((Data1[4])/(Data2[4])))\n",
-    "check_conv_order(\"A_rhsD2\", np.log2((Data1[5])/(Data2[5])))\n",
-    "check_conv_order(\"psi6Phi_rhs\", np.log2((Data1[6])/(Data2[6])))"
+    "check_conv_order(\"Stilde_rhsD0\", np.log2(np.abs((Data1[0])/(Data2[0]))))\n",
+    "check_conv_order(\"Stilde_rhsD1\", np.log2(np.abs((Data1[1])/(Data2[1]))))\n",
+    "check_conv_order(\"Stilde_rhsD2\", np.log2(np.abs((Data1[2])/(Data2[2]))))\n",
+    "check_conv_order(\"A_rhsD0\", np.log2(np.abs((Data1[3])/(Data2[3]))))\n",
+    "check_conv_order(\"A_rhsD1\", np.log2(np.abs((Data1[4])/(Data2[4]))))\n",
+    "check_conv_order(\"A_rhsD2\", np.log2(np.abs((Data1[5])/(Data2[5]))))\n",
+    "check_conv_order(\"psi6Phi_rhs\", np.log2(np.abs((Data1[6])/(Data2[6]))))"
    ]
   },
   {
@@ -1066,21 +1066,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
