--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -145,7 +145,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import outCfunction, outputC # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction, lhrh # NRPy+: Core C code output module\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
